--- a/main.css
+++ b/main.css
@@ -10,3 +10,6 @@
   margin-top: 1em;
   background-color: grey;
 }
+#FormNewService, #FormNewNosServices, #FormNewCategorie, #FormNewProjet {
+  display: none;
+}
