--- a/main.css
+++ b/main.css
@@ -10,6 +10,6 @@
   margin-top: 1em;
   background-color: grey;
 }
-#FormNewService, #FormNewNosServices, #FormNewCategorie, #FormNewProjet {
+#FormNewService, #FormNewNosServices, #FormNewCategorie, #FormNewProjet, #showNosServices {
   display: none;
 }
